--- a/src/app/subject/subject-edit/subject-edit.component.html
+++ b/src/app/subject/subject-edit/subject-edit.component.html
@@ -25,7 +25,7 @@
     <!-- Button -->
     <div class="form-group fa-pull-right" >
       <button id="userDetail" type="button" [routerLink]="['/subjects/'+getCurrentSubjectID()]"
-              class="btn btn-outline-primary pull-right">Back</button>
+              class="btn btn-outline-primary">Back</button>
       <button id="submit" type="submit" [disabled]="!form.form.valid"
               class="btn btn-success ms-3 ">Submit</button>
     </div>
