--- a/src/app/subject/subject-create/subject-create.component.html
+++ b/src/app/subject/subject-create/subject-create.component.html
@@ -3,7 +3,7 @@
 
     <!-- Name Input -->
     <div class="form-group mb-3" >
-      <label class="control-label" for="name">Name*</label>
+      <label class="control-label" for="name">Subject Name*</label>
       <input id="name" name="name" type="text" class="form-control" required [(ngModel)]="subject.name" #name="ngModel">
       <div class="invalid-feedback">A subject name is required </div>
     </div>
