Added initial tests EditUser

--- a/src/app/admin/admin-detail/admin-detail.component.html
+++ b/src/app/admin/admin-detail/admin-detail.component.html
@@ -8,7 +8,7 @@
       </div>
       <div class="col-md-4 p-3">
         <h6 class="card-subtitle text-muted">Email</h6>
-        <p class="card-text">{{admin.email}}</p>
+        <p id="email" class="card-text">{{admin.email}}</p>
       </div>
       <div class="col-md-4 p-3">
         <h6 class="card-subtitle text-muted">Role</h6>
