Remove repeated menu entry for Users

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -18,14 +18,6 @@
              [routerLink]="['/ratings']"><span class="fas fa-user-circle"></span> List Ratings</a>
         </div>
       </li>
-      <li class="nav-item" *ngIf="isAdmin()" ngbDropdown>
-        <a class="nav-link dropdown-toggle" id="playerDropdown" role="button"
-           aria-haspopup="true" aria-expanded="false" ngbDropdownToggle>Users</a>
-        <div class="dropdown-menu" aria-labelledby="playDropdown" ngbDropdownMenu>
-          <a class="dropdown-item" [routerLinkActive]="'active'" [routerLinkActiveOptions]="{ exact: true }"
-             [routerLink]="['/users']">List Users</a>
-        </div>
-      </li>
       <li class="nav-item" *ngIf="isStudent()" ngbDropdown>
         <a class="nav-link dropdown-toggle" id="playerDropdown2" role="button"
            aria-haspopup="true" aria-expanded="false" ngbDropdownToggle>Students</a>
@@ -39,7 +31,7 @@
            aria-haspopup="true" aria-expanded="false" ngbDropdownToggle>Users</a>
         <div class="dropdown-menu" aria-labelledby="playDropdown" ngbDropdownMenu>
           <a class="dropdown-item" [routerLinkActive]="'active'" [routerLinkActiveOptions]="{ exact: true }"
-             [routerLink]="['/admins']"><span class="fas fa-user-circle"></span> List Users</a>
+             [routerLink]="['/users']"><span class="fas fa-user-circle"></span> List Users</a>
         </div>
       </li>
       <li class="nav-item" ngbDropdown>
