--- a/src/app/university/university-list/university-list.component.html
+++ b/src/app/university/university-list/university-list.component.html
@@ -4,19 +4,19 @@
     <div class="card-body row align-items-center">
       <div class="col">
         <h6 class="card-subtitle text-muted">University</h6>
-        <a class="card-text" [routerLink]="['/universities', university.id]">{{university.name}}</a>
+        <a class="card-text universityName" [routerLink]="['/universities', university.id]">{{university.name}}</a>
       </div>
       <div class="col">
         <h6 class="card-subtitle text-muted">Acronym</h6>
-        <p class="card-text">{{university.acronym}}</p>
+        <p  class="card-text universityAcronym">{{university.acronym}}</p>
       </div>
       <div class="col">
         <h6 class="card-subtitle text-muted">Country</h6>
-        <p class="card-text">{{university.country}}</p>
+        <p  class="card-text universityCountry">{{university.country}}</p>
       </div>
       <div class="col">
         <h6 class="card-subtitle text-muted">City</h6>
-        <p class="card-text">{{university.city}}</p>
+        <p  class="card-text universityCity">{{university.city}}</p>
       </div>
     </div>
   </div>
