--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -58,6 +58,14 @@
              [routerLink]="['/degrees']"><span class="fas fa-user-circle"></span> List Degrees</a>
         </div>
       </li>
+      <li class="nav-item" ngbDropdown>
+        <a class="nav-link dropdown-toggle" role="button"
+           aria-haspopup="true" aria-expanded="false" ngbDropdownToggle>Resources</a>
+        <div class="dropdown-menu" aria-labelledby="playDropdown" ngbDropdownMenu>
+          <a class="dropdown-item" [routerLinkActive]="'active'" [routerLinkActiveOptions]="{ exact: true }"
+             [routerLink]="['/resources']"><span class="fas fa-user-circle"></span> List Resources</a>
+        </div>
+      </li>
     </ul>
     <ul class="navbar-nav ms-auto me-3" app-login-navbar></ul>
   </div>
