--- a/src/app/resource/resource-list/resource-list.component.html
+++ b/src/app/resource/resource-list/resource-list.component.html
@@ -10,7 +10,14 @@
         <h6 class="card-subtitle text-muted">Description</h6>
         <p class="card-text">{{resource.description}}</p>
       </div>
-      <!-- Rest of attributes-->
+      <div class="col">
+        <h6 class="card-subtitle text-muted">Resource type</h6>
+        <p class="card-text">{{resource.resourceType}}</p>
+      </div>
+      <div class="col">
+        <h6 class="card-subtitle text-muted">Owner</h6>
+        <p class="card-text">{{resource.owner.username}}</p>
+      </div>
     </div>
   </div>
 </div>
