--- a/src/app/resource/resource-list/resource-list.component.html
+++ b/src/app/resource/resource-list/resource-list.component.html
@@ -16,7 +16,7 @@
       </div>
       <div class="col">
         <h6 class="card-subtitle text-muted">Owner</h6>
-        <p class="card-text">{{resource.owner.username}}</p>
+        <p class="card-text">{{resource.owner.id}}</p>
       </div>
     </div>
   </div>
