User resource.uri instead of resource.id

--- a/src/app/resource/resource-list/resource-list.component.html
+++ b/src/app/resource/resource-list/resource-list.component.html
@@ -4,7 +4,7 @@
     <div class="card-body row align-items-center">
       <div class="col">
         <h6 class="card-subtitle text-muted">Resource</h6>
-        <a class="card-text" [routerLink]="['/resources', resource.id]">{{resource.name}}</a>
+        <a class="card-text" [routerLink]="[resource.uri]">{{resource.name}}</a>
       </div>
       <div class="col">
         <h6 class="card-subtitle text-muted">Description</h6>
