--- a/src/app/resource/resource-delete/resource-delete.component.html
+++ b/src/app/resource/resource-delete/resource-delete.component.html
@@ -6,7 +6,7 @@
     <div class="text-center">
       <button id="deleteBtn" type="button" (click)="delete()"
               class="btn btn-outline-danger m-1">Delete</button>
-      <button id="listBtn" type="button" [routerLink]="['resources', resource.id]"
+      <button id="listBtn" type="button" [routerLink]="[resource.uri]"
               class="btn btn-outline-primary m-1">Cancel</button>
     </div>
   </div>
