Hide resource search because it is not working

--- a/src/app/resource/resource-list/resource-list.component.html
+++ b/src/app/resource/resource-list/resource-list.component.html
@@ -1,4 +1,4 @@
-<app-resource-search [pageSize] = "pageSize" (emitResults)="modifyList($event)"></app-resource-search>
+<!-- app-resource-search [pageSize] = "pageSize" (emitResults)="modifyList($event)"></app-resource-search -->
 <div class="card mb-1" *ngFor="let resource of resources">
   <div class="card-block row">
     <div class="card-body row align-items-center">
