Use the optional chaining operand to avoid errors when owner not yet loaded

--- a/src/app/resource/resource-detail/resource-detail.component.html
+++ b/src/app/resource/resource-detail/resource-detail.component.html
@@ -12,7 +12,7 @@
       </div>
       <div class="col-md-4 p-3">
         <h6 class="card-subtitle text-muted">Owner</h6>
-        <p class="card-text">{{resource.owner.username}}</p>
+        <p class="card-text">{{resource.owner?.id}}</p>
       </div>
     </div>
     <div class="card-footer text-right">
