--- a/src/app/resource/resource-detail/resource-detail.component.html
+++ b/src/app/resource/resource-detail/resource-detail.component.html
@@ -19,10 +19,10 @@
       <button id="listBtn" type="button" [routerLink]="['/resources']"
               class="btn m-1 btn-outline-primary">Resources List
       </button>
-      <button id="editBtn" type="button" *ngIf="isRole('admin')" [routerLink]="['edit']"
+      <button id="editBtn" type="button" *ngIf="isOwner(resource.owner)" [routerLink]="['edit']"
               class="btn m-1 btn-outline-success">Edit
       </button>
-      <button id="deleteBtn" type="button" *ngIf="isRole('admin')" [routerLink]="['delete']"
+      <button id="deleteBtn" type="button" *ngIf="isOwner(resource.owner)" [routerLink]="['delete']"
               class="btn m-1 btn-outline-danger">Delete
       </button>
     </div>
